syntax = "proto3";
package user_pb;
option go_package = "grpc-go-templete/pkg/pb/user_pb";

import "google/api/annotations.proto";

service Users {
    rpc CreateUser (User) returns (User) {
        option (google.api.http) = {
            post: "/users"
            body: "*"
        };
    };
    rpc GetUser (UserRequest) returns (UserResponse) {
        option (google.api.http) = {
            get: "/users/{id}"
        };
    };
    rpc GetUserList (UserListRequest) returns (UserListResponse) {
        option (google.api.http) = {
            get: "/users"
        };
    };
}

message User {
    string id = 1;
    string name = 2;
    string username = 3;
    int32 old = 4;
}

message UserRequest {
    string id = 1;
}

message UserResponse {
    User data = 1;
}

message UserListRequest {
    string filter = 1;
    int32 offset = 2;
    int32 limit = 3;
    repeated string ids = 4;
}

message UserListResponse {
    repeated User data = 1;
    int64 total = 2;
}